Projeto Final Snake Game

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 	<body>
 	   <h1> SNAKE GAME!</h1>
 	    <canvas id="snake" width="512" height="512"></canvas>
-		
+		<div id="pt">
+		    <h1> PONTOS</h1>
+		    <p id="pontos">0</p>
+		</div>
 	</body>
 	
 </html>
